# micro-cv

./: .gitignore  CMakeLists.txt  README.md
images/: square.tiff
include/: FileIo.h  ImageProcessing.h  Mat.h  Matrix.h  MicroCvFileIo.h
src/: FileIo.cpp  ImageProcessing.cpp  Mat.cpp  Matrix.cpp  MicroCvFileIo.cpp  main.cpp  main_crop.cpp  main_rgb2gray.cpp  main_sobel_edges.cpp
test/: RandomMat.h  TestFileIo.cpp  TestImageProcessing.cpp  TestMat.cpp
